--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </header>
     <main class="container mx-auto px-4 py-8">
         <section id="inicio" class="text-center mb-8">
-            <h1 class="text-3xl md:text-4xl font-bold text-blue-800 mb-4">Soluciones logísticas de última milla, recolección y almacenamiento confiables</h1>
-            <p class="text-lg text-gray-600 mb-6">Conectamos tu negocio con tus clientes de forma segura, puntual y eficiente en el sureste de México.</p>
+            <h1 class="text-3xl md:text-4xl font-bold text-blue-800 mb-4">Soluciones logísticas integrales: primera, media y ultima milla con almacenamiento y recoleción confiables</h1>
+            <p class="text-lg text-gray-600 mb-6">Conectamos tu cadena logística de inicio a fin, asegurando entregas eficientes, seguras y puntuales en el sureste de México.</p>
             <a href="https://wa.me/9931100903?text=Hola,%20quiero%20cotizar%20un%20envío" target="_blank" class="bg-blue-600 text-white px-6 py-2 rounded">Cotiza tu envío</a>
             <p class="text-gray-500 mt-2">Respuesta en menos de 24 horas</p>
         </section>
