--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="text-gray-500 mt-2">Respuesta en menos de 24 horas</p>
         </section>
         <section id="servicios" class="mb-8">
-            <img alt="Delivery person with a van" class="w-full rounded" style="height: 400px; object-fit: cover;" src="C:\Users\angel\Downloads\mh ultima milla\imagen repartidor.jpg"/>
+            <img alt="Delivery person with a van" class="w-full rounded" style="height: 400px; object-fit: cover;" src="https://static6.depositphotos.com/1003559/644/i/450/depositphotos_6440330-stock-photo-white-truck.jpg"/>
         </section>
         <section id="cobertura" class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8">
             <div class="bg-white shadow rounded p-4 text-center">
