--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>MH Transport Logistic</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
     <style>
         body {
@@ -106,24 +106,24 @@
         <!-- Nuevo div con 5 espacios para iconos y descripciones -->
         <div class="flex justify-between items-center mb-8">
             <div class="flex flex-col items-center">
-                <i class="fas fa-truck text-blue-600 text-3xl mb-2"></i>
-                <p class="text-gray-600 text-center">Entrega rápida</p>
-            </div>
-            <div class="flex flex-col items-center">
                 <i class="fas fa-box text-blue-600 text-3xl mb-2"></i>
-                <p class="text-gray-600 text-center">Almacenamiento seguro</p>
+                <p class="text-gray-600 text-center">Primera milla</p>
             </div>
             <div class="flex flex-col items-center">
-                <i class="fas fa-map-marker-alt text-blue-600 text-3xl mb-2"></i>
-                <p class="text-gray-600 text-center">Cobertura amplia</p>
+                <i class="fas fa-truck text-blue-600 text-3xl mb-2"></i>
+                <p class="text-gray-600 text-center">Media milla</p>
             </div>
             <div class="flex flex-col items-center">
-                <i class="fas fa-clock text-blue-600 text-3xl mb-2"></i>
-                <p class="text-gray-600 text-center">Puntualidad</p>
+                <i class="fas fa-shuttle-van text-blue-600 text-3xl mb-2"></i>
+                <p class="text-gray-600 text-center">Última milla</p>
             </div>
             <div class="flex flex-col items-center">
-                <i class="fas fa-shield-alt text-blue-600 text-3xl mb-2"></i>
-                <p class="text-gray-600 text-center">Seguridad</p>
+                <i class="fas fa-solid fa-calendar-days text-blue-600 text-3xl mb-2"></i>
+                <p class="text-gray-600 text-center">Recolección programada</p>
+            </div>
+            <div class="flex flex-col items-center">
+                <i class="fas fa-warehouse text-blue-600 text-3xl mb-2"></i>
+                <p class="text-gray-600 text-center">Almacenamiento estratégico</p>
             </div>
         </div>
         <section id="cobertura" class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8">
