--- a/index.html
+++ b/index.html
@@ -104,53 +104,43 @@
             </div>
         </section>
         <!-- Nuevo div con 5 espacios para iconos y descripciones -->
-        <div class="flex justify-between items-center mb-8">
-            <div class="flex flex-col items-center">
+        <div class="flex overflow-x-auto mb-8">
+            <div class="flex flex-col items-center mx-2">
                 <i class="fas fa-box text-blue-600 text-3xl mb-2"></i>
                 <div class="max-w-md mx-auto bg-white shadow-md rounded-lg p-4">
                     <p class="text-gray-600 text-center font-bold">Primera milla</p>
                     <p class="text-gray-500 text-center mt-2">Recogemos mercancía en origen.</p>
                 </div>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="flex flex-col items-center mx-2">
                 <i class="fas fa-truck text-blue-600 text-3xl mb-2"></i>
-                <p class="text-gray-600 text-center font-bold">Media milla</p>
-                <p class="text-gray-500 text-center mt-2">Movemos mercancía entre tiendas, centros de distribución.</p>
+                <div class="max-w-md mx-auto bg-white shadow-md rounded-lg p-4">
+                    <p class="text-gray-600 text-center font-bold">Media milla</p>
+                    <p class="text-gray-500 text-center mt-2">Movemos mercancía entre tiendas, centros de distribución.</p>
+                </div>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="flex flex-col items-center mx-2">
                 <i class="fas fa-shuttle-van text-blue-600 text-3xl mb-2"></i>
-                <p class="text-gray-600 text-center font-bold">Última milla</p>
-                <p class="text-gray-500 text-center mt-2">Entregamos en puntos de destino.</p>
+                <div class="max-w-md mx-auto bg-white shadow-md rounded-lg p-4">
+                    <p class="text-gray-600 text-center font-bold">Última milla</p>
+                    <p class="text-gray-500 text-center mt-2">Entregamos en puntos de destino.</p>
+                </div>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="flex flex-col items-center mx-2">
                 <i class="fas fa-solid fa-calendar-days text-blue-600 text-3xl mb-2"></i>
-                <p class="text-gray-600 text-center font-bold">Recolección programada</p>
-                <p class="text-gray-500 text-center mt-2">Tecnología para rastreo en tiempo real.</p>
+                <div class="max-w-md mx-auto bg-white shadow-md rounded-lg p-4">
+                    <p class="text-gray-600 text-center font-bold">Recolección programada</p>
+                    <p class="text-gray-500 text-center mt-2">Tecnología para rastreo en tiempo real.</p>
+                </div>
             </div>
-            <div class="flex flex-col items-center">
+            <div class="flex flex-col items-center mx-2">
                 <i class="fas fa-warehouse text-blue-600 text-3xl mb-2"></i>
-                <p class="text-gray-600 text-center font-bold">Almacenamiento estratégico</p>
-                <p class="text-gray-500 text-center mt-2">Administramos tu estructura más óptimamente.</p>
+                <div class="max-w-md mx-auto bg-white shadow-md rounded-lg p-4">
+                    <p class="text-gray-600 text-center font-bold">Almacenamiento estratégico</p>
+                    <p class="text-gray-500 text-center mt-2">Administramos tu estructura más óptimamente.</p>
+                </div>
             </div>
         </div>
-        <section id="cobertura" class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8">
-            <div class="bg-white shadow rounded p-4 text-left">
-                <h2 class="text-2xl font-bold mb-4">¿Por qué elegirnos?</h2>
-                <ul class="list-none mb-8">
-                    <li class="flex items-center mb-2">
-                        <i class="fas fa-check text-blue-600 mr-2"></i>
-                        <span>Más de 5 años de experiencia en el sureste</span>
-                    </li>
-                    <li class="flex items-center mb-2">
-                        <i class="fas fa-check text-blue-600 mr-2"></i>
-                        <span>Entregas el mismo día (same-day delivery)</span>
-                    </li>
-                    <li class="flex items-center mb-2">
-                        <i class="fas fa-check text-blue-600 mr-2"></i>
-                        <span>Tecnología para rastreo en tiempo real</span>
-                    </li>
-                </ul>
-            </div>
             <div class="bg-white shadow rounded p-4 text-left">
                 <p class="text-2xl font-bold mb-4">Cobertura activa en Tabasco, Chiapas y ampliación continua.</p>
                 <p class="text-lg text-gray-600 mt-4">Nuestros servicios abarcan las principales ciudades del sureste.</p>
