--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <p class="text-gray-500 mt-2">Respuesta en menos de 24 horas</p>
             </div>
             <div class="md:w-1/2 text-center relative-container">
-                <img alt="Delivery person with a van" class="w-full rounded" style="height: 400px; object-fit: cover;" src="https://goo.su/Dur0R"/>
+                <img alt="Delivery person with a van" class="w-full rounded" style="height: 400px; object-fit: cover;" src="https://scontent.fvsa2-1.fna.fbcdn.net/v/t39.30808-6/487376005_10231269828186891_9177228084355047985_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEeQBXWH4LG2jMuJ3YRfmNcPx_58dW1TRs_H_nx1bVNGzudqv1_RYzQYF0V57uNobo&_nc_ohc=JUiABr3vvQAQ7kNvwHBifzn&_nc_oc=AdkuU8UVsurzbbpBl8eqSlOA4EpuGgG-gK-Teqsy25SvSIuyL0kZsXk-U1dgwEO8acg&_nc_zt=23&_nc_ht=scontent.fvsa2-1.fna&_nc_gid=IavEjBPVdn4hZ9fo1UNy0w&oh=00_AYFJ3d2vIFmFoZ1NYvKuX6caG7P7A0qx_SFH-7rTz3YAEQ&oe=67F73B37"/>
             </div>
         </section>
         <!-- Nuevo div con 5 espacios para iconos y descripciones -->
