--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <p class="text-gray-500 mt-2">Respuesta en menos de 24 horas</p>
             </div>
             <div class="md:w-1/2 text-center relative-container">
-                <img alt="Delivery person with a van" class="w-full rounded" style="height: 400px; object-fit: cover;" src="https://scontent.fvsa2-1.fna.fbcdn.net/v/t39.30808-6/487376005_10231269828186891_9177228084355047985_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_ohc=OPvAK6I47XUQ7kNvwFpfePb&_nc_oc=Adkh_FmOiUsuHsIeAmB3t6NKK-l03tsU1GIZc-FgEJuQ9mGnrRnpFM5wSkHr6bGWLhY&_nc_zt=23&_nc_ht=scontent.fvsa2-1.fna&_nc_gid=H-oD6AZFBBxoCG50jmjt1g&oh=00_AfEq3lLSCtlCKWh1JL3qCG6XghQSuLU4jKPFJMtVrNBWBg&oe=67FF2437"/>
+                <img alt="Delivery person with a van" class="w-full rounded" style="height: 400px; object-fit: cover;" src="https://github.com/angeldm1990/mhtl/blob/main/camionlogo.jpg?raw=true"/>
             </div>
         </section>
         <div class="flex overflow-x-auto mb-8">
