--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             formData.append('_next', window.location.href + '#inicio');
             
             try {
-                const response = await fetch('https://formsubmit.co/ajax/angel.diaz9090@gmail.com', {
+                const response = await fetch('https://formspree.io/f/xvgryayv', {
                     method: 'POST',
                     body: formData,
                     headers: {
