--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
                 <p class="text-gray-500 mt-2">Respuesta en menos de 24 horas</p>
             </div>
             <div class="md:w-1/2 text-center relative-container scroll-animate animate-up">
-                <img alt="Delivery person with a van" class="w-full rounded" style="height: 400px; object-fit: cover;" src="https://github.com/angeldm1990/mhtl/blob/main/trailermhbajo.png?raw=true"/>
-            </div>
+    <img alt="Delivery person with a van" class="w-full rounded object-cover md:h-[400px]" src="https://github.com/angeldm1990/mhtl/blob/main/trailermhbajo.png?raw=true"/>
+</div>
         </section>
 
         <!-- Modal del formulario -->
@@ -472,3 +472,5 @@
     </script>
 </body>
 </html>
+           
+           
