--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <p class="text-gray-500 mt-2">Respuesta en menos de 24 horas</p>
             </div>
             <div class="md:w-1/2 text-center relative-container scroll-animate animate-up">
-    <img alt="Delivery person with a van" class="w-full rounded object-cover md:h-[400px]" src="https://github.com/angeldm1990/mhtl/blob/main/mhtrans.jpeg"/>
+    <img alt="Delivery person with a van" class="w-full rounded object-cover md:h-[400px]" src="https://github.com/angeldm1990/mhtl/blob/main/trailermhbajo.png"/>
 </div>
         </section>
 
@@ -474,6 +474,7 @@
 </html>
            
            
+
 
 
 
