Update print statement from 'Hello' to 'Goodbye'
Signed-off-by: angeldm1990 <angel.diaz9090@gmail.com>

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <header class="bg-white shadow fixed-header">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center nav-container">
             <div class="logo-container">
-                <img alt="MH Transport Logistic Logo" class="mr-2" height="70" src="https://github.com/angeldm1990/mhtl/blob/main/mhtrans.jpeg" width="250"/>
+                <img alt="MH Transport Logistic Logo" class="mr-2" height="70" src="mhtrans.jpeg" width="250"/>
             </div>
             <div class="nav-items-container">
                 <a href="#inicio">Inicio</a>
@@ -229,7 +229,7 @@
                 <p class="text-gray-500 mt-2">Respuesta en menos de 24 horas</p>
             </div>
             <div class="md:w-1/2 text-center relative-container scroll-animate animate-up">
-    <img alt="Delivery person with a van" class="w-full rounded object-cover md:h-[400px]" src="https://github.com/angeldm1990/mhtl/blob/main/trailermhbajo.png"/>
+    <img alt="Delivery person with a van" class="w-full rounded object-cover md:h-[400px]" src="trailermhbajo.png"/>
 </div>
         </section>
 
@@ -474,6 +474,7 @@
 </html>
            
            
+
 
 
 
