--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <header class="bg-white shadow fixed-header">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center nav-container">
             <div class="logo-container">
-                <img alt="MH Transport Logistic Logo" class="mr-2" height="70" src="mhtrans.jpeg" width="250"/>
+                <img alt="MH Transport Logistic Logo" class="mr-2" height="70" src="mhtrans1.webp" width="250"/>
             </div>
             <div class="nav-items-container">
                 <a href="#inicio">Inicio</a>
@@ -474,6 +474,7 @@
 </html>
            
            
+
 
 
 
